classDiagram
    class User {
        +String id
        +String email
        +String passwordHash
        +String name
        +Float heightCm
        +Float weightKg
        +DateTime birthDate
        +String gender
        +String goal
        +String activityLevel
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Exercise {
        +String id
        +String name
        +String description
        +String category
        +String muscleGroup
        +String equipment
        +String difficulty
        +String instructions
        +String imageUrl
        +DateTime createdAt
    }

    class WorkoutPlan {
        +String id
        +String userId
        +String name
        +String description
        +Boolean isTemplate
        +DateTime createdAt
        +DateTime updatedAt
    }

    class WorkoutPlanExercise {
        +String id
        +String planId
        +String exerciseId
        +Int dayOfWeek
        +Int sets
        +Int reps
        +Int durationSeconds
        +Int restSeconds
        +Int sortOrder
        +String notes
    }

    class WorkoutLog {
        +String id
        +String userId
        +String planId
        +DateTime date
        +Int durationMinutes
        +String notes
        +DateTime createdAt
    }

    class WorkoutLogExercise {
        +String id
        +String logId
        +String exerciseId
        +String notes
    }

    class WorkoutLogSet {
        +String id
        +String logExerciseId
        +Int setNumber
        +Int reps
        +Float weightKg
    }

    class FoodItem {
        +String id
        +String name
        +Float caloriesPer100g
        +Float proteinPer100g
        +Float carbsPer100g
        +Float fatPer100g
        +Float servingSize
        +String servingUnit
        +Boolean isCustom
        +String createdByUserId
        +DateTime createdAt
    }

    class MealRecord {
        +String id
        +String userId
        +DateTime date
        +String mealType
        +String foodItemId
        +Float quantityGrams
        +DateTime createdAt
    }

    class ChatSession {
        +String id
        +String userId
        +String title
        +DateTime createdAt
        +DateTime updatedAt
    }

    class ChatMessage {
        +String id
        +String sessionId
        +String role
        +String content
        +DateTime createdAt
    }

    User "1" --> "0..*" WorkoutPlan : has
    User "1" --> "0..*" WorkoutLog : has
    User "1" --> "0..*" MealRecord : has
    User "1" --> "0..*" ChatSession : has
    User "1" --> "0..*" FoodItem : creates

    WorkoutPlan "1" --> "0..*" WorkoutPlanExercise : contains
    Exercise "1" --> "0..*" WorkoutPlanExercise : used in

    WorkoutPlan "1" --> "0..*" WorkoutLog : tracks
    WorkoutLog "1" --> "0..*" WorkoutLogExercise : contains
    Exercise "1" --> "0..*" WorkoutLogExercise : used in

    WorkoutLogExercise "1" --> "0..*" WorkoutLogSet : has

    FoodItem "1" --> "0..*" MealRecord : tracked in

    ChatSession "1" --> "0..*" ChatMessage : contains